<package format="2">
  <name>si_amr</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for si_amr</p>
    <p>This package contains configuration data, 3D models and launch files
for si_amr robot</p>
  </description>
  <author>virapong chongpatiyutt</author>
  <maintainer email="virapongc@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>